This file shows the changes in this release of xPDO.

- [#6152] Optionally skip empty string values in xPDO::getOption()
- [#4523] Log SQL errors in xPDOObject::loadCollectionGraph
- [#6095] Log errors when xPDOManager::addField/alterField fail
- [#6098] Fix issue with preg_replace in xPDO::parseBindings() method
- [#5970] Fix issue with subpackages and derived classes that would cause nonsensical error

xPDO 2.2.0-pl (November 15, 2011)
====================================
- [#6046] Fix getDescendants() to recursively get derivative classes
- [#6045] Fix setPackageMeta() to work with sub-packages
- [#6044] Allow STI derivatives to supplement base class metadata
- [#6043] Allow xPDO->getSelectColumns() to be overridden in xPDOObject derivatives

xPDO 2.2.0-rc2 (October 20, 2011)
====================================
- Fix xPDOAPCCache and xPDOWinCache multiple_object_delete features
- Fix various bugs with database result set caching
- Refactor escapeChar and quoteChar to xPDODriver classes
- [#2432] Store relative path of files preserved by xPDOVehicle file resolvers
- [#5904] Provide access to name and version in Transport packages

xPDO 2.2.0-rc1 (September 7, 2011)
====================================
- Add support for field aliases to be defined in the schema
- Add xPDOObject->addFieldAlias for creating references to actual fields
- Add xPDOObject->getIterator for iterating aggregate and composite relations
- [#4590] Allow multiple connections to be defined for master/slave configurations
- [#2883] Add xPDOObject->getGraph() and add feature in toArray() to return related object fields
- Add xPDO->getGraph() method to infer relation graphs
- [#4275] Add xPDO->updateCollection() method
- [#4275] Enable UPDATE support and add set() method to xPDOQuery
- [#5306] Add xPDOQuery->distinct() method
- Change xPDO::getService() method to indicate it returns a reference
- Avoid unsetting the current package if xPDO->addPackage() fails